--- a/currency_converter_and_rates_privacy_policy.html
+++ b/currency_converter_and_rates_privacy_policy.html
@@ -1,8 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Currency Converter and Rates Privacy Policy</title>
+        <script>
+            // Define string constants
+            const APP_NAME = "Currency Converter and Rates";
+            const COMPANY = "Peter Takacs";
+            const APP_VERSION = "1.0";
+            const YEAR = "2023";
+            const MONTH = "06";
+            const DAY = "06";
+            const HOUSE_NUMBER = "28";
+            const STREET = "Honfoglalas utca";
+            const CITY = "Gyor";
+            const STATE = "Gyor-Moson-Sopron megye";
+            const COUNTRY = "Hungary";
+            const ZIP_CODE = "9011";
+            const EMAIL = "example@gmail.com";
+        
+            // Insert constants into HTML
+            document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("appName").textContent = APP_NAME;
+            document.getElementById("company").textContent = COMPANY;
+            document.getElementById("appVersion").textContent = APP_VERSION;
+            document.getElementById("year").textContent = YEAR;
+            document.getElementById("month").textContent = MONTH;
+            document.getElementById("day").textContent = DAY;
+            document.getElementById("houseNumber").textContent = HOUSE_NUMBER;
+            document.getElementById("street").textContent = STREET;
+            document.getElementById("city").textContent = CITY;
+            document.getElementById("state").textContent = STATE;
+            document.getElementById("country").textContent = COUNTRY;
+            document.getElementById("zipCode").textContent = ZIP_CODE;
+            document.getElementById("email").textContent = EMAIL;
+        });
+    </script>
+    </head>
     <body>
-        <h1 style="text-align: center;"><span style="font-weight: 400;">Hide My Notes Privacy Policy</span></h1>
+        <h1 style="text-align: center;"><span style="font-weight: 400;" id="appName"></span>!</h1>
         <p><span style="font-weight: 400;">This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. 
             PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify 
             an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in 
