changed to constants

--- a/currency_converter_and_rates_privacy_policy.html
+++ b/currency_converter_and_rates_privacy_policy.html
@@ -7,9 +7,7 @@
             const APP_NAME = "Currency Converter and Rates";
             const COMPANY = "Peter Takacs";
             const APP_VERSION = "1.0";
-            const YEAR = "2023";
-            const MONTH = "06";
-            const DAY = "06";
+            const DATE = "2023-06-06";
             const HOUSE_NUMBER = "28";
             const STREET = "Honfoglalas utca";
             const CITY = "Gyor";
@@ -23,9 +21,7 @@
             document.getElementById("appName").textContent = APP_NAME;
             document.getElementById("company").textContent = COMPANY;
             document.getElementById("appVersion").textContent = APP_VERSION;
-            document.getElementById("year").textContent = YEAR;
-            document.getElementById("month").textContent = MONTH;
-            document.getElementById("day").textContent = DAY;
+            document.getElementById("date").textContent = DATE;
             document.getElementById("houseNumber").textContent = HOUSE_NUMBER;
             document.getElementById("street").textContent = STREET;
             document.getElementById("city").textContent = CITY;
@@ -37,7 +33,7 @@
     </script>
     </head>
     <body>
-        <h1 style="text-align: center;"><span style="font-weight: 400;" id="appName"></span>!</h1>
+        <h1 style="text-align: center;"><span style="font-weight: 400;" id="appName"></span> Privacy Policy</h1>
         <p><span style="font-weight: 400;">This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. 
             PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify 
             an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in 
@@ -187,12 +183,12 @@
         <p><strong>Contacting Us</strong></p>
         <p><span style="font-weight: 400;">If there are any questions regarding this privacy policy, you may contact us using the information below.</span></p>
         <p>&nbsp;</p>
-        <p><span style="font-weight: 400;">Hide My Notes</span></p>
-        <p><span style="font-weight: 400;">Bolcso utca</span></p>
-        <p><span style="font-weight: 400;">Budapest, Pest 1117&nbsp;</span></p>
-        <p><span style="font-weight: 400;">Hungary</span></p>
-        <p><span style="font-weight: 400;">cabbagesoftwareco@gmail.com</span></p>
+        <p><span style="font-weight: 400;" id="appName"></span></p>
+        <p><span style="font-weight: 400;" id="street" id="houseNumber"></span></p>
+        <p><span style="font-weight: 400;" id="state" id="city" id="zipCode"></span></p>
+        <p><span style="font-weight: 400;" id="country"></span></p>
+        <p><span style="font-weight: 400;" id="email"></span></p>
         <p>&nbsp;</p>
-        <p><span style="font-weight: 400;">Last Edited on 2022-10-23</span></p>
+        <p><span style="font-weight: 400;">Last Edited on </span><span style="font-weight: 400;" id="date"></span></p>
     </body>
 </html>
