--- a/currency_converter_and_rates_privacy_policy.html
+++ b/currency_converter_and_rates_privacy_policy.html
@@ -18,22 +18,24 @@
         
             // Insert constants into HTML
             document.addEventListener("DOMContentLoaded", function() {
-            document.getElementById("appName").textContent = APP_NAME;
-            document.getElementById("company").textContent = COMPANY;
-            document.getElementById("appVersion").textContent = APP_VERSION;
-            document.getElementById("date").textContent = DATE;
-            document.getElementById("houseNumber").textContent = HOUSE_NUMBER;
-            document.getElementById("street").textContent = STREET;
-            document.getElementById("city").textContent = CITY;
-            document.getElementById("state").textContent = STATE;
-            document.getElementById("country").textContent = COUNTRY;
-            document.getElementById("zipCode").textContent = ZIP_CODE;
-            document.getElementById("email").textContent = EMAIL;
-        });
-    </script>
+                document.getElementById("appName").textContent = APP_NAME;
+                document.getElementById("appName1").textContent = APP_NAME;
+            	//document.getElementById("company").textContent = COMPANY;
+            	document.getElementById("appVersion").textContent = APP_VERSION;
+                document.getElementById("appVersion1").textContent = APP_VERSION;
+                document.getElementById("date").textContent = DATE;
+                document.getElementById("houseNumber").textContent = HOUSE_NUMBER;
+                document.getElementById("street").textContent = STREET;
+                document.getElementById("city").textContent = CITY;
+                document.getElementById("state").textContent = STATE;
+                document.getElementById("country").textContent = COUNTRY;
+                document.getElementById("zipCode").textContent = ZIP_CODE;
+                document.getElementById("email").textContent = EMAIL;
+            });
+        </script>
     </head>
     <body>
-        <h1 style="text-align: center;"><span style="font-weight: 400;" id="appName"></span> Privacy Policy</h1>
+        <h1 style="text-align: center;"><span id="appName"></span> <span id="appVersion"></span> Privacy Policy</h1>
         <p><span style="font-weight: 400;">This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. 
             PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify 
             an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in 
@@ -183,12 +185,12 @@
         <p><strong>Contacting Us</strong></p>
         <p><span style="font-weight: 400;">If there are any questions regarding this privacy policy, you may contact us using the information below.</span></p>
         <p>&nbsp;</p>
-        <p><span style="font-weight: 400;" id="appName"></span></p>
-        <p><span style="font-weight: 400;" id="street" id="houseNumber"></span></p>
-        <p><span style="font-weight: 400;" id="state" id="city" id="zipCode"></span></p>
+        <p><span style="font-weight: 400;" id="appName1"></span> <span style="font-weight: 400;" id="appVersion1"></span></p>
+        <p><span style="font-weight: 400;" id="street"></span> <span style="font-weight: 400;" id="houseNumber"></span></p>
+        <p><span style="font-weight: 400;" id="state"></span>, <span style="font-weight: 400;" id="city"></span> <span style="font-weight: 400;" id="zipCode"></span></p>
         <p><span style="font-weight: 400;" id="country"></span></p>
         <p><span style="font-weight: 400;" id="email"></span></p>
         <p>&nbsp;</p>
-        <p><span style="font-weight: 400;">Last Edited on </span><span style="font-weight: 400;" id="date"></span></p>
+        <p>Last Edited on <span id="date"></span></p>
     </body>
 </html>
