--- a/currency_converter_and_rates_privacy_policy.html
+++ b/currency_converter_and_rates_privacy_policy.html
@@ -5,8 +5,8 @@
         <script>
             // Define string constants
             const APP_NAME = "Currency Converter and Rates";
-            const COMPANY = "Peter Takacs";
             const APP_VERSION = "1.0";
+            const COMPANY = "Peter Takacs";
             const DATE = "2023-06-06";
             const HOUSE_NUMBER = "28";
             const STREET = "Honfoglalas utca";
@@ -20,7 +20,6 @@
             document.addEventListener("DOMContentLoaded", function() {
                 document.getElementById("appName").textContent = APP_NAME;
                 document.getElementById("appName1").textContent = APP_NAME;
-            	//document.getElementById("company").textContent = COMPANY;
             	document.getElementById("appVersion").textContent = APP_VERSION;
                 document.getElementById("appVersion1").textContent = APP_VERSION;
                 document.getElementById("date").textContent = DATE;
@@ -35,7 +34,8 @@
         </script>
     </head>
     <body>
-        <h1 style="text-align: center;"><span id="appName"></span> <span id="appVersion"></span> Privacy Policy</h1>
+        <h1 style="text-align: center;">Privacy Policy</h1>
+        <h2 style="text-align: center;"><span id="appName"></span> <span id="appVersion"></span></h2>
         <p><span style="font-weight: 400;">This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. 
             PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify 
             an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in 
@@ -186,7 +186,7 @@
         <p><span style="font-weight: 400;">If there are any questions regarding this privacy policy, you may contact us using the information below.</span></p>
         <p>&nbsp;</p>
         <p><span style="font-weight: 400;" id="appName1"></span> <span style="font-weight: 400;" id="appVersion1"></span></p>
-        <p><span style="font-weight: 400;" id="street"></span> <span style="font-weight: 400;" id="houseNumber"></span></p>
+        <p><span style="font-weight: 400;" id="street"></span> <span style="font-weight: 400;" id="houseNumber"></span>.</p>
         <p><span style="font-weight: 400;" id="state"></span>, <span style="font-weight: 400;" id="city"></span> <span style="font-weight: 400;" id="zipCode"></span></p>
         <p><span style="font-weight: 400;" id="country"></span></p>
         <p><span style="font-weight: 400;" id="email"></span></p>
