--- a/currency_converter_and_rates_terms_of_use.html
+++ b/currency_converter_and_rates_terms_of_use.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Currency Converter and Rates Terms of Use</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.png">
         <script>
             // Define string constants
             const APP_NAME = "Currency Converter and Rates";
