--- a/currency_converter_and_rates_privacy_policy.html
+++ b/currency_converter_and_rates_privacy_policy.html
@@ -3,6 +3,14 @@
     <head>
         <title>Currency Converter and Rates Privacy Policy</title>
         <link rel="icon" type="image/x-icon" href="/favicon.png">
+        <style>
+            body {
+                font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                padding: 1em;
+                background-color: #282828;
+                color: white;
+            }
+        </style>
         <script>
             // Define string constants
             const APP_NAME = "Currency Converter and Rates";
