--- a/currency_converter_and_rates_terms_of_use.html
+++ b/currency_converter_and_rates_terms_of_use.html
@@ -18,7 +18,7 @@
             const APP_NAME_VERSION = "Currency Converter and Rates 1.0";
             const COMPANY = "Peter Takacs";
             const YEAR = "2023";
-            const DATE = "2023-06-06";
+            const DATE = "06-06-2023";
             const HOUSE_NUMBER = "28";
             const STREET = "Honfoglalas utca";
             const CITY = "Gyor";
@@ -64,7 +64,6 @@
                 document.getElementById("appNameVersion32").textContent = APP_NAME_VERSION;
                 document.getElementById("appNameVersion33").textContent = APP_NAME_VERSION;
                 document.getElementById("appNameVersion34").textContent = APP_NAME_VERSION;
-                document.getElementById("appNameVersion35").textContent = APP_NAME_VERSION;
             	document.getElementById("company").textContent = COMPANY;
                 document.getElementById("company1").textContent = COMPANY;
                 document.getElementById("company2").textContent = COMPANY;
@@ -86,12 +85,12 @@
                 document.getElementById("company18").textContent = COMPANY;
                 document.getElementById("company19").textContent = COMPANY;
                 document.getElementById("company20").textContent = COMPANY;
+                document.getElementById("company21").textContent = COMPANY;
                 document.getElementById("year").textContent = YEAR;
                 document.getElementById("date").textContent = DATE;
                 document.getElementById("houseNumber").textContent = HOUSE_NUMBER;
                 document.getElementById("street").textContent = STREET;
                 document.getElementById("city").textContent = CITY;
-                document.getElementById("state").textContent = STATE;
                 document.getElementById("country").textContent = COUNTRY;
                 document.getElementById("zipCode").textContent = ZIP_CODE;
                 document.getElementById("email").textContent = EMAIL;
@@ -187,5 +186,14 @@
             <span id="appNameVersion35"></span>. <span id="company20"></span> may also use this information to provide notices to you which may be of use or interest to you.</span>
         </p>
         <p><br><br style="font-weight: 400;"></p>
+        <p><strong>Contacting Us</strong></p>
+        <p><span style="font-weight: 400;">If there are any questions regarding this terms of use, you may contact us using the information below.</span></p>
+        <p>&nbsp;</p>
+        <p><span style="font-weight: 400;" id="company21"></span></p>
+        <p><span style="font-weight: 400;" id="country"></span>, <span style="font-weight: 400;" id="zipCode"></span> <span style="font-weight: 400;" id="city"></span></p>
+        <p><span style="font-weight: 400;" id="street"></span> <span style="font-weight: 400;" id="houseNumber"></span></p>
+        <p><span style="font-weight: 400;" id="email"></span></p>
+        <p>&nbsp;</p>
+        <p>Last edited on <span id="date"></span></p>
     </body>
 </html>
