--- a/currency_converter_and_rates_privacy_policy.html
+++ b/currency_converter_and_rates_privacy_policy.html
@@ -23,7 +23,7 @@
             const STATE = "Gyor-Moson-Sopron megye";
             const COUNTRY = "Hungary";
             const ZIP_CODE = "9011";
-            const EMAIL = "example@gmail.com";
+            const EMAIL = "petertakacs.app@gmail.com";
         
             // Insert constants into HTML
             document.addEventListener("DOMContentLoaded", function() {
