--- a/index.html
+++ b/index.html
@@ -1,117 +1,81 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <base href="/">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currency Converter and Rates</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <style>
-      body {
-        margin: 0;
-        padding: 1em;
-        background-color: #282828;
-        color: white;
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="generation-date" content="06.04.2023 16:44:59">
+  <title>Currency Converter and Rates</title>
+  <style>
+    body {
+      background-color: #282828;
+      color: white;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 16px;
+      line-height: 1.5em;
+      margin: 0;
+      padding: 10px
+    }
 
-      header {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        padding: 20px;
-      }
+    a {
+      color: #f9e9b1;
+      text-decoration: none
+    }
 
-      header img {
-        width: 50px;
-        height: 50px;
-        margin-right: 10px;
-      }
+    a:hover {
+      color: #fff
+    }
 
-      .logo {
-        font-size: 24px;
-        font-weight: bold;
-      }
+    h1 {
+      font-size: 25px;
+      padding: 20px
+    }
 
-      .content {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 20px;
-      }
+    h2 {
+      font-size: 18px
+    }
 
-      .left {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-      }
+    .center {
+      text-align: center
+    }
 
-      /*.left img {
-      width: 1179px;
-      height: 2556px;
+    img.logo {
+      display: block;
+      margin: 0 auto;
+      width: 150px;
+      height: 150px;
+      border-radius: 30px;
+      box-shadow: 0 0 5px rgb(0 0 0 / 40%)
+    }
+
+    img.mockups {
+      display: block;
+      margin: 0 auto;
+      width: 295px;
+      height: 639px;
       margin-bottom: 10px;
-    }*/
-      .left img {
-        width: 295px;
-        height: px;
-        margin-bottom: 10px;
-      }
+      border-radius: 30px;
+      box-shadow: 0 0 5px rgb(0 0 0 / 40%)
+    }
 
-      .left-bottom {
-        margin-top: auto;
-        padding-bottom: 20px;
-      }
-
-      .small-icons img {
-        width: 60px;
-        height: 60px;
-        margin-bottom: 10px;
-      }
-
-      /* Responsive styles */
-      @media screen and (max-width: 768px) {
-        .content {
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .left,
-        .right {
-          width: 100%;
-          padding: 20px 0;
-        }
-
-        .left img {
-          width: 150px;
-          height: 150px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <img src="images/favicon.png" alt="Logo">
-      <div class="logo">CURRENCY CONVERTER AND RATES</div>
-    </header>
-    <div class="content">
-      <div class="left">
-        <img src="images/convert.png" alt="mockup photo">
-        <p>Some text on the left center</p>
-        <div class="small-icons">
-          <a href="https://apps.apple.com/us/app/currency-converter-and-rates/id6448806360">
-            <img src="images/apple_logo_white.png" alt="apple link">
-          </a>
-          <a href="https://apps.apple.com/us/app/currency-converter-and-rates/id6448806360">
-            <img src="images/rating_icon.jpg" alt="apple link">
-          </a>
-        </div>
-      </div>
-      <div class="right">
-        <!-- Place your content or image here -->
-      </div>
-    </div>
-  </body>
-</html>
+    a.support {
+      font-size: 14px;
+      color: #ccc
+    }
+  </style>
+  <link href="images/favicon.png" rel="icon" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/appicon180.png">
+</head>
+<body>
+  <div class="center">
+    <h1>Currency Converter and Rates</h1>
+    <img class="logo" src="images/favicon.png">
+    <p>
+      <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360?platform=iphone">iPhone</a> | <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360?platform=ipad">iPad</a> | <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360?platform=ipad">Mac</a>
+    </p>
+    <p> ⭐ <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360?action=write-review">Rate the App in the App Store</a>
+    </p>
+    <img class="mockups" src="images/convert.png">
+    <p>
+      <a class="support" href="mailto:petertakacs.app@gmail.com?subject=[Currency HELP]"> petertakacs.app@gmail.com </a>
+    </p>
+  </div>
+</body>
