--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Currency Converter and Rates">
+  <meta name="description" content="Currency Converter and Rates">
+  <meta name="keywords" content="currency, converter, rates, forex, exchange">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="revisit-after" content="1 days">
+  <meta name="author" content="Peter Takacs">
+  <meta name="language" content="English">
   <title>Currency Converter and Rates</title>
+  <link href="images/favicon.png" rel="icon" type="image/x-icon">
   <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="/style/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="main">
+    <div class="header">
+      <!--
+        reviews
+      -->
+    </div>
     <div class="logo">
       <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360"><img src="images/favicon.png"></a>
       <div class="logoText">
@@ -22,22 +38,40 @@
         <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360"><img src="images/appstore.svg" alt="Download App"></a>
       </div>
       <div class="icons">
-        <a class="mail" href="mailto:petertakacs.app@gmail.com?subject=[Support] - Currency Converter and Rates"><ion-icon name="mail"></ion-icon></a>
         <a class="star" href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360?action=write-review"><ion-icon name="star"></ion-icon></a>
+        <a class="instagram" href="https://instagram.com/thecurrencyconverterapp?igshid=OGQ5ZDc2ODk2ZA=="><ion-icon name="logo-instagram"></ion-icon></a>
+        <a class="twitter" href="https://twitter.com/theconverterapp/"><ion-icon name="logo-twitter"></ion-icon></a>
+        <a class="facebook" href="https://www.facebook.com/profile.php?id=100093984010320"><ion-icon name="logo-facebook"></ion-icon></a>
+        <a class="mail" href="mailto:petertakacs.app@gmail.com?subject=[Support] - Currency Converter and Rates"><ion-icon name="mail"></ion-icon></a>
+
         <!--
-        <a class="facebook" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-        <a class="instagram" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-        <a class="twitter" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
         <a class="tiktok" href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
         <a class="discord" href="#"><ion-icon name="logo-discord"></ion-icon></a>
         <a class="snapchat" href="#"><ion-icon name="logo-snapchat"></ion-icon></a>
+        <i class="fa fa-telegram" aria-hidden="true"></i>
         -->
       </div>
       <div class="mockup">
-        <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360"><img class="mockup" src="images/convert.png" alt="Download App"></a>
+        <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360"><img class="mockup" src="images/mockups/mockup1.png" alt="Download App"></a>
       </div>
     </div>
   </div>
+  <!--
+  <div class="footerBox">
+    <div class="footer">
+      <div class="footerElements">
+        <a class="mail" href="mailto:petertakacs.app@gmail.com?subject=[Support] - Currency Converter and Rates"><ion-icon name="mail"></ion-icon><span>Contact</span></a>
+      </div>
+      <div class="footerElements">
+        <p>Copyright © 2023 Currency Converter and Rates. All Rights Reserved.</p>
+      </div>
+      <div class="footerElements">
+        <a href="/currency_converter_and_rates_privacy_policy.html">Privacy Policy</a>
+        <a href="/currency_converter_and_rates_terms_of_use.html">Terms of Use</a>
+      </div>
+    </div>
+  </div>
+  -->
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
