--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="content">
       <h1>Travel smarter,<br>invest wiser!</h1>
       <p>Experience currency conversion made easy.
-        Travel smarter with<br>offline capabilities, set your own rates, 
-        and enjoy lightning-fast<br>conversions with our handy calculator.</p>
+        Travel smarter with <br class="linebreak">offline capabilities, set your own rates, 
+        and enjoy lightning-fast <br class="linebreak">conversions with our handy calculator.</p>
       <div class="appstore">
         <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360"><img src="images/appstore.svg" alt="Download App"></a>
       </div>
