logo, footer, carousel

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 </head>
 <body>
   <div class="main">
+    <!-- 
     <div class="header">
-      <!--
-        reviews
-      -->
+      <div class="image-carousel">
+        <img class="carousel-image active" src="images/mockups/mockup1.png" alt="Review Image 1">
+        <img class="carousel-image" src="images/mockups/mockup2.png" alt="Review Image 2">
+        <img class="carousel-image" src="images/mockups/mockup3.png" alt="Review Image 3">
+      </div>
     </div>
+     -->
     <div class="logo">
       <a href="https://apps.apple.com/app/currency-converter-and-rates/id6448806360"><img src="images/favicon.png"></a>
       <div class="logoText">
@@ -56,11 +60,13 @@
       </div>
     </div>
   </div>
-  <!--
+  <!-- 
   <div class="footerBox">
     <div class="footer">
       <div class="footerElements">
-        <a class="mail" href="mailto:petertakacs.app@gmail.com?subject=[Support] - Currency Converter and Rates"><ion-icon name="mail"></ion-icon><span>Contact</span></a>
+        <a class="mail" href="mailto:petertakacs.app@gmail.com?subject=[Support] - Currency Converter and Rates">
+          <ion-icon name="mail"></ion-icon><span>Contact</span>
+        </a>
       </div>
       <div class="footerElements">
         <p>Copyright © 2023 Currency Converter and Rates. All Rights Reserved.</p>
@@ -71,7 +77,8 @@
       </div>
     </div>
   </div>
-  -->
+   -->
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+  <!-- <script src="script/carousel.js"></script> -->
 </body>
 </html>
